dark mode config completed but localstorage not fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 @tailwind utilities;
 
 @layer base {
-  :root {   
+  :root {
+    &,
+    &.light-mode {
       --background-app-rgb: 255, 255, 255;
       --color-primary-900: 74, 109, 255;
       --color-primary-800: 92, 124, 255;
@@ -33,13 +35,28 @@
       --color-red-500: 239, 68, 68;
       --color-red-300: 252, 165, 165;
     }
+    &.dark-mode {
+      --color-secondary-900: 249, 250, 251;
+      --color-secondary-800: 243, 244, 246;
+      --color-secondary-700: 229, 231, 235;
+      --color-secondary-600: 209, 213, 219;
+      --color-secondary-500: 156, 163, 175;
+      --color-secondary-400: 107, 114, 128;
+      --color-secondary-300: 75, 85, 99;
+      --color-secondary-200: 55, 65, 81;
+      --color-secondary-100: 31, 41, 55;
+      --color-secondary-50: 17, 24, 39;
+      --color-secondary-0: 24, 33, 47;
+      --backdrop-color: 0, 0, 0;
+    }
+  }
   }
 
 @layer components {
   .textField__input {
    @apply w-full py-2 px-4 text-secondary-900 rounded-xl border border-gray-200 outline-none 
             hover:border-primary-300 
-            focus:bg-white
+            focus:bg-secondary-0
             focus:border-primary-500
             transition-all duration-300 ease-out
             focus:shadow-lg focus:shadow-primary-300 mt-2
